logs/slack-sansio.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slack'...
Compiling './lib/python3.5/site-packages/slack/commands.py'...
***   File "./lib/python3.5/site-packages/slack/commands.py", line 68
    command = f'/{command}'
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/slack/io'...
Compiling './lib/python3.5/site-packages/slack/io/abc.py'...
***   File "./lib/python3.5/site-packages/slack/io/abc.py", line 118
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/slack/io/aiohttp.py'...
***   File "./lib/python3.5/site-packages/slack/io/aiohttp.py", line 28
    yield data.data
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/slack_sansio-0.3.3.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/conftest.py'...
***   File "./lib/python3.5/site-packages/tests/conftest.py", line 118
    raise ValueError(f'Event "{request.param}" not found')
                                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests/data'...
Listing './share'...
Listing './share/python-wheels'...
